# py-console-scripts-lint

./: .gitignore  README.md  console_scripts.py  pyproject.toml
.github/workflows/: action.yml
src/: files.py  main.py  types.py  util.py
