[project]
name = "pyconsole"
version = "0.0.1"
description = "A lint check for python console scripts."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Charles Patel", email = "charlespatel007@yahoo.com" },
]
keywords = ["automation", "autopep8"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "flake8==5.0.4",
    "isort==5.13.2",
    "mypy==1.8.0",
]

[project.scripts]
pyconsole = "src.main:main"

[tool.black]
line-length = 110
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git/         # root of the project
    | \.mypy_cache/
    | \.egg-info
    | build
    | dist
    | __pycache__
    | stubs
  )
)
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 110
skip_gitignore = true
multi_line_output = "VERTICAL_HANGING_INDENT"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true
